style.css
body {
  font-family: roboto, arial, sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

li,
a {
  text-decoration: none;
  margin: 0;
  padding: 0;
  color: #e5e7eb;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  padding: 10px 10%;
  background-color: #1f2937;
}

.left-header {
  display: flex;
  align-items: flex-end;
  gap: 1px;
}

.logo-text {
  font-size: 24px;
  font-weight: 500;
  color: #f9faf8;
  /* background-image: linear-gradient(45deg, #ffffff, #8400ff);
  background-size: 100%;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-background-clip: text;
  -moz-text-fill-color: transparent; */
}

.logo {
  height: 40px;
  width: auto;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.nav-links {
  list-style: none;
}

.nav-links li {
  display: inline-block;
  padding: 0px 20px;
}

.nav-links li a {
  transition: all 0.3s ease 0s;
}

.nav-links li a:hover {
  color: #3882f6;
}

.main-1 {
  display: flex;
  max-height: fit-content;
  justify-content: space-around;
  background-color: #1f2937;
}

.m1-container {
  display: flex;
  box-sizing: border-box;
  justify-content: center;
  flex-wrap: wrap;
}

.m1-left {
  max-width: 400px;
  min-width: 300px;
  padding: 20px;
  color: #f9faf8;
  flex-wrap: wrap;
}

h1 {
  font-size: 48px;
  font-weight: 900;
}

p {
  font-size: 18px;
  color: #e5e7eb;
  padding: 16px 0px;
}

.m1-left button {
  border-radius: 8px;
  font-size: 16px;
  font-weight: bold;
  padding: 10px 20px;
  background-color: #3882f6;
  color: #e5e7eb;
  border: none;
  cursor: pointer;
}

.m1-right {
  padding: 20px;
  max-width: 500px;
}

.m1-right img {
  max-height: 400px;
  max-width: 400px;
}

.main-2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 40px;
}

.main-2 button {
  width: 200px;
  height: 200px;
  margin: 20px 10px 0px 10px;
  border-radius: 15px;
  border: 5px solid #3882f6;
}

.container {
  display: flex;
  margin: 20px 20px;
  justify-content: center;
  /* flex-wrap: wrap; */
}

.button1 {
  background: url(./img/michi1.jpg);
  background-position: center;
  background-size: cover;
}

.button2 {
  background: url(./img/michi2.jpg);
  background-position: center;
  background-size: cover;
}

.button3 {
  background: url(./img/michi3.jpg);
  background-position: center;
  background-size: cover;
}

.button4 {
  background: url(./img/michi4.jpg);
  background-position: center;
  background-size: cover;
}

small {
  display: block;
  margin-left: 10px;
  margin-top: 5px;
  text-align: center;
  max-width: 200px;
}

